--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -2,8 +2,12 @@
 
   <div class="search">
     <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit">Search</button>
+      <input class="place" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button class="btn" type="submit">
+        <svg width="15px" height="22px" class="change_svg">
+          <use xlink:href="./images/search.svg#Glyph"></use>
+        </svg>
+      </button>
     </form>
   </div>
 
