--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,6 +1,3 @@
-<main class="main">
-  <div class="div"></div>
-  <div class="div"></div>
-  <div class="div"></div>
-  <div class="div"></div>
+<main>
+  <div class="gallery"></div>
 </main>
