--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,12 +1,30 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
-.main{
+.gallery{
   display: grid;
-  grid-template:300px/1fr 1fr 1fr 1fr;
-  column-gap: 30px;
-  row-gap: 30px;
-  .div{
-    background: red;
+  grid-template:auto/1fr 1fr 1fr 1fr;
+  column-gap: 15px;
+  row-gap: 15px;
+  img{
+    display: block;
+    width: 100%;
+    height:auto
+  }
+  .info{
+    display: flex;
+    padding: 5px;
+  }
+  .info-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 7px;
+  }
+  .photo-card{
+    box-shadow: 0px 1px 1px rgba(0,0,0,.12), 0px 4px 4px rgba(0,0,0,.06), 1px 4px 6px rgba(0,0,0,.16);
+  }
+  .statistics{
+    padding: 5px;
   }
 }
 
