--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -2,8 +2,8 @@
 
 .gallery{
   display: grid;
-  grid-template:auto/1fr 1fr 1fr 1fr;
-  
+  grid-template:1fr/1fr 1fr 1fr 1fr;
+
   column-gap: 15px;
   row-gap: 15px;
   img{
