--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,7 +1,7 @@
 <main>
   <div class="gallery"></div>
   <button type="button" class="load-more hidden">
-    <img src="./images/load.png" alt="load" class="loading load">
+    <img src="./images/load.png" alt="load" class="loading">
     Load more
   </button>
 </main>
