--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -2,10 +2,10 @@
   background: rgb(64, 86, 180);
   padding-top:10px;
   padding-bottom: 10px;
+  text-align: center;
   .search-form{
     text-align: center;
-    margin: 0px auto;
-    width: 25%;
+    display: inline-block;
     position: relative;
   }
   .place {
@@ -13,7 +13,7 @@
     padding: 5px 10px;
     border-radius: 5px;
     font-weight: 600;
-    width: 100%;
+    max-width: 100%;
     border: none;
     outline: none;
     &:focus{
@@ -24,7 +24,8 @@
     position: absolute;
     height: 100%;
     right: 0;
-    background: transparent;
+    background: #ffffff;
+    border-radius: 5px;
     border: none;
     cursor: pointer;
   }
