--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 5px;
 }
 .gallery .info-item {
