--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,12 @@
           column-gap: 15px;
   row-gap: 15px;
 }
+@media screen and (max-width: 450px) {
+  .gallery {
+    grid-template: auto auto/1fr;
+    padding: 0 15px;
+  }
+}
 .gallery img {
   display: block;
   width: 100%;
