--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 main{
   display: inline-block;
   width:100%;
+  margin-bottom: 8px;
 }
 .gallery{
   display: grid;
@@ -46,25 +47,6 @@ main{
   padding: 3px 10px;
   position: relative;
   cursor: pointer;
-  .loading{
-    position: absolute;
-    height: 15px;
-    width:15px;
-    left:-20px;
-    top:50%;
-    transform: translateY(-50%) scale(0)
-  }
-  .loading.load{
-    animation:2s linear 0s infinite loading
-  }
-  @keyframes loading {
-    from {
-      transform: translateY(-50%)
-    }
-    to {
-      transform: translateY(-50%) rotateZ(1turn)
-    }
-  }
 }
 
 .load-more.hidden {
